properly fixed horizontal scroll

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -21,6 +21,11 @@
   font-family:'League Spartan', sans-serif;
 }
 
+#app {
+  overflow-x: hidden;
+  width: 100vw;
+}
+
 .content {
   display: flex;
   justify-content: center;
